--- a/DockerfileBuildEnv
+++ b/DockerfileBuildEnv
@@ -1,5 +1,5 @@
-FROM ubuntu:18.04
-LABEL Description="Build environment"
+FROM ubuntu:22.04
+LABEL Description="ELSF Build environment"
 
 ENV HOME /root
 
@@ -8,9 +8,15 @@ SHELL ["/bin/bash", "-c"]
 RUN apt-get update && apt-get -y --no-install-recommends install \
     build-essential \
     clang \
+    clangd \
     cmake \
     gdb \
-    wget
+    wget \
+    git \
+    ninja-build \
+    python3 \
+    python3-pip 
+
 
 # Let us add some heavy dependency
 # RUN cd ${HOME} && \
