Rework Broker/Router slightly

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,9 @@
 # project specific logic here.
 #
 cmake_minimum_required (VERSION 3.8)
+set(CMAKE_CXX_STANDARD 20) 
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
 
 set(BUILD_ESLF_TESTS "Build unit tests" OFF)
 
@@ -18,7 +21,7 @@ project ("ELSF")
 
 file(GLOB_RECURSE SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
 
-add_library(${PROJECT_NAME} src/Encoder/IEncoder.cpp src/State/Machine/Machine.cpp src/State/Machine/EStop.cpp src/State/Machine/Idle.cpp src/State/Machine/Running.cpp)
+add_library(${PROJECT_NAME} ${SOURCES})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 # This allows users which use the add_subdirectory or FetchContent
 # to use the same target as users which use find_package
