--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -9,6 +9,7 @@ RUN apt-get update && apt-get -y --no-install-recommends install \
     build-essential \
     clang \
     clangd \
+    lld \
     cmake \
     gdb \
     wget \
