Start fixing the message router tests

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -23,6 +23,7 @@ run apt install llvm-14 llvm-14-tools -y
 run update-alternatives --install /usr/bin/llvm-cov llvm-cov /usr/bin/llvm-cov-14 100
 run update-alternatives --install /usr/bin/llvm-profdata llvm-profdata /usr/bin/llvm-profdata-14 100
 
+run curl -fsSL https://ollama.com/install.sh | sh
 
 # Let us add some heavy dependency
 # RUN cd ${HOME} && \
