--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,13 +6,29 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 include(FetchContent)
-FetchContent_Declare(
- googletest
- URL https://github.com/google/googletest/archive/refs/heads/main.zip
-)
+# FetchContent_Declare(
+#  googletest
+#  URL https://github.com/google/googletest/archive/refs/heads/main.zip
+# )
 
-set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-FetchContent_MakeAvailable(googletest)
+FetchContent_Declare(
+  Catch2
+  GIT_REPOSITORY https://github.com/catchorg/Catch2.git
+  GIT_TAG        v3.4.0 # or a later release
+)
+FetchContent_MakeAvailable(Catch2)
+
+
+
+FetchContent_Declare(
+  trompeloeil
+  GIT_REPOSITORY https://github.com/rollbear/trompeloeil.git
+  GIT_TAG        v47 # or a later release
+)
+FetchContent_MakeAvailable(trompeloeil)
+
+# set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+# FetchContent_MakeAvailable(googletest)
 
 file(GLOB_RECURSE TESTS ${CMAKE_SOURCE_DIR}/test/*.cpp)
 
@@ -29,9 +45,11 @@ include_directories(./)
 if(EXPOSE_COVERAGE_TARGET AND CMAKE_CXX_COMPILER_ID MATCHES "Clang")
 target_link_libraries(
   elsf_tests PRIVATE -fprofile-instr-generate
-  gtest gtest_main
-  GTest::gtest_main
-  GTest::gmock_main
+  # gtest gtest_main
+  # GTest::gtest_main
+  # GTest::gmock_main
+  Catch2::Catch2WithMain
+  trompeloeil::trompeloeil
   etl
   elsf::elsf
   atomic
@@ -39,10 +57,12 @@ target_link_libraries(
 )
 else()
 target_link_libraries(
-  elsf_tests
-  gtest gtest_main
-  GTest::gtest_main
-  GTest::gmock_main
+  elsf_tests PRIVATE
+  # gtest gtest_main
+  # GTest::gtest_main
+  # GTest::gmock_main
+  Catch2::Catch2WithMain
+  trompeloeil::trompeloeil
   etl
   elsf::elsf
   atomic
