--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,13 +6,33 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 include(FetchContent)
-FetchContent_Declare(
- googletest
- URL https://github.com/google/googletest/archive/refs/heads/main.zip
-)
+# FetchContent_Declare(
+#  googletest
+#  URL https://github.com/google/googletest/archive/refs/heads/main.zip
+# )
 
-set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-FetchContent_MakeAvailable(googletest)
+FetchContent_Declare(
+  Catch2
+  GIT_REPOSITORY https://github.com/catchorg/Catch2.git
+  GIT_TAG        v3.4.0 # or a later release
+)
+FetchContent_MakeAvailable(Catch2)
+
+list(APPEND CMAKE_MODULE_PATH ${catch2_SOURCE_DIR}/extras)
+include(CTest)
+include(Catch)
+
+
+
+FetchContent_Declare(
+  trompeloeil
+  GIT_REPOSITORY https://github.com/rollbear/trompeloeil.git
+  GIT_TAG        v47 # or a later release
+)
+FetchContent_MakeAvailable(trompeloeil)
+
+# set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+# FetchContent_MakeAvailable(googletest)
 
 file(GLOB_RECURSE TESTS ${CMAKE_SOURCE_DIR}/test/*.cpp)
 
@@ -29,9 +49,11 @@ include_directories(./)
 if(EXPOSE_COVERAGE_TARGET AND CMAKE_CXX_COMPILER_ID MATCHES "Clang")
 target_link_libraries(
   elsf_tests PRIVATE -fprofile-instr-generate
-  gtest gtest_main
-  GTest::gtest_main
-  GTest::gmock_main
+  # gtest gtest_main
+  # GTest::gtest_main
+  # GTest::gmock_main
+  Catch2::Catch2WithMain
+  trompeloeil::trompeloeil
   etl
   elsf::elsf
   atomic
@@ -39,19 +61,29 @@ target_link_libraries(
 )
 else()
 target_link_libraries(
-  elsf_tests
-  gtest gtest_main
-  GTest::gtest_main
-  GTest::gmock_main
+  elsf_tests PRIVATE
+  # gtest gtest_main
+  # GTest::gtest_main
+  # GTest::gmock_main
+  Catch2::Catch2WithMain
+  trompeloeil::trompeloeil
   etl
   elsf::elsf
   atomic
 )
 endif()
 
-include(GoogleTest PUBLIC)
+target_compile_definitions(elsf_tests PRIVATE
+ #-DCATCH_CONFIG_FAST_COMPILE
+ -DCATCH_CONFIG_POSIX_SIGNALS
+ -DCATCH_CONFIG_EXPERIMENTAL_REDIRECT
+                              )
+
+#include(GoogleTest PUBLIC)
 #  find_package(PkgConfig)
 #  pkg_search_module(GTEST REQUIRED gtest_main)
 #  target_link_libraries(elsf_tests PRIVATE ${GTEST_LDFLAGS})
 #  target_compile_options(elsf_tests PRIVATE ${GTEST_CFLAGS})
-gtest_discover_tests(elsf_tests)
+#gtest_discover_tests(elsf_tests)
+
+catch_discover_tests(elsf_tests)
